fix: define color for text visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,7 @@ button {
   text-transform: uppercase;
   padding: 1rem;
   background-color: black;
+  color: white;
   font-size: 20px;
   font-family: 'Silkscreen', 'Roboto Mono', monospace;
 }
